fixed password visibility

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -24,6 +24,8 @@ $text-font: muli, sans-serif;
 
 body{
     font-family: $text-font;
+    // background: black;
+    // color: $white;
 }
 
 .navbar {
@@ -77,7 +79,7 @@ body{
 .container {
     display: flex;
     height: calc(100vh - 70px);
-    width: 80%;
+    width: 100vw;
     overflow: hidden;
     align-items: center;
     justify-content: center;
@@ -94,7 +96,7 @@ body{
 }
 
 .form-section {
-    width: 29%;
+    width: 30%;
 }
 
 .box {
@@ -135,7 +137,7 @@ body{
 
 .form-instruction {
     color: $text-color;
-    line-height: 1.2rem;
+    line-height: 1.5rem;
     margin-bottom: 40px;
     font-size: 0.9rem;
 }
@@ -152,22 +154,41 @@ body{
 
 .input-field input::placeholder {
     font-weight: 400;
+    color: $text-color;
 }
 
 input:focus, input:active {
     outline: none;
     border: none;
 }
+
 .input-field {
     width: 100%;
     align-content: center;
     border-bottom: 1px solid $offwhite-line;
     margin-bottom: 25px;
+    position: relative;
 }
 
 .input-field img {
-    float: right;
+    position: absolute;
+    // margin-left: -30px;
+    // margin-bottom: -60px;
+    // top: -3;
+    top: 5px;
+    right: 5px;
+    height: 1.2rem;
+    // float: right;
 }
+
+.input-field input{
+    width: 100%;
+    padding-top: 10px;
+}
+
+// .input-field input[type ="email"] {
+//     width: 100%;
+// }
 
 .input-title {
     margin-bottom: 10px;
@@ -196,7 +217,7 @@ input:focus, input:active {
 }
 
 .illustration-container {
-    width: 56%;
+    width: 58%;
     object-fit: fill;
 
     img {
